--- a/WebApplication1/Views/Category/Index.cshtml
+++ b/WebApplication1/Views/Category/Index.cshtml
@@ -32,6 +32,15 @@
                 <td width="50%">
                     @obj.DisplayOrder
                 </td>
+                 <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"
+                        class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i> Edit</a>
+                         <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id"
+                        class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i> Delete</a>
+                    
+					</div>
+				</td>
             </tr>
         }
     </tbody>
